--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ main {
 main section {
     width: 100%;
     max-width: 100%;
-    height: 70%;
+    height: 600px;
     position: relative;
 }
 
@@ -112,12 +112,22 @@ main section:after {
 }
 
 .slide_1 {
-    background: url("../img/work1.jpg") no-repeat scroll 0 0 transparent;
+    background: url("../img/work1.jpg") no-repeat scroll center 0 transparent;
     background-size: cover;
 }
 
 .slide_2 {
-    background: url("../img/work2.jpg") no-repeat scroll 0 0 transparent;
+    background: url("../img/work2.jpg") no-repeat scroll center 0 transparent;
+    background-size: cover;
+}
+
+.slide_3 {
+    background: url("../img/work3.jpg") no-repeat scroll center 0 transparent;
+    background-size: cover;
+}
+
+.slide_4 {
+    background: url("../img/work4.jpg") no-repeat scroll center 0 transparent;
     background-size: cover;
 }
 
