--- a/css/style.css
+++ b/css/style.css
@@ -97,9 +97,9 @@ main {
 main section {
     width: 100%;
     max-width: 100%;
-    height: 600px;
+    height: 400px;
     position: relative;
-    margin: 0 0 124px 0;
+    margin: 0 0 123px 0;
 }
 
 main section:after {
@@ -177,8 +177,6 @@ main section:after {
 }
 
 .inner-header {
-    margin: 0 -2.5%;
-    height: 350px;
     position: relative;
 }
 
@@ -186,7 +184,7 @@ main section:after {
     left: 2.5%;
     bottom: 0;
     padding: 10px 0;
-    background: none rgba(255, 255, 255, 0.40);
+    background: none rgba(255, 255, 255, 0.8);
     width: 95%;
     position: absolute;
     margin: 0;
@@ -195,12 +193,16 @@ main section:after {
     color: #333;
     font: bold 30px/30px RalewaySemiBold;
 }
+.owl-controls {
+    position: absolute;
+    bottom: 47px;
+    right: 2.5%;
+}
 .inner-content {
-    height: 100%;
     padding: 40px 35px 50px;
     background: none #fff;
     display: table;
-    width: 100%;
+    width: 90%;
 }
 .inner-content p {
     padding: 0 25px 0 0;
@@ -229,6 +231,11 @@ main section:after {
 .vacancy-list {
     width: 100%;
     letter-spacing: 3px;
+    margin: 30px 0 0 0;
+}
+
+.vacancy-list .button {
+    margin: 0 0 10px;
 }
 
 .slider {
@@ -238,41 +245,31 @@ main section:after {
     right: 12px;
 }
 
-.slider .left,
-.slider .square,
-.slider .right {
+.owl-prev,
+.owl-next {
     background: url('../img/p_navigation.png') no-repeat scroll transparent;
     width: 40px;
     height: 40px;
     display: inline-block;
+    cursor: pointer;
 }
 
-.slider a.left,
-.slider a.square,
-.slider a.right {
+.owl-prev,
+.owl-next {
     cursor: pointer;
     opacity: .8;
 }
 
-.slider span.left,
-.slider span.square,
-.slider span.right {
-    opacity: .5;
-}
-
-.slider a.left:hover ,
-.slider a.square:hover ,
-.slider a.right:hover  {
+.owl-prev:hover ,
+.owl-next:hover  {
     opacity: 1;
 }
 
-.slider .left{
+.owl-prev{
     background-position: 0 0;
 }
-.slider .square{
-    background-position: -40px 0;
-}
-.slider .right {
+
+.owl-next {
     background-position: -81px 0;
 }
 
@@ -381,12 +378,13 @@ main section:after {
         height: 56px;
         bottom: -73px;
         right: 50%;
-        margin: 0 -100px 0 0;
+        margin: 0 -85px 0 0;
     }
     .other {
         bottom: -117px;
         right: 50%;
-        margin: 0 -72px 0 0;
+        margin: 0 -58px 0 0;
+        width: 80px;
     }
 
     .menu-toggle {
@@ -428,6 +426,12 @@ main section:after {
     }
     main section {
         height: 200px;
+    }
+    .inner-content img {
+        display: none;
+    }
+    .inner-content {
+        width: 90%;
     }
 }
 
