--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,15 @@ main section:after {
     letter-spacing: normal;
 }
 
+.button:hover {
+    box-shadow: 1px 2px 5px  #000;
+}
+
+
+.button:active {
+    background: none #ccc;
+}
+
 #map-wrapper {
     width: 100%;
     margin: 30px auto;
